padding the bookshelves

--- a/404.html
+++ b/404.html
@@ -92,7 +92,7 @@
     <div class="container py-5 px-5">
     <!-- scrapbook --> 
     <h3>a little lost</h3>
-    <a href="/"><h4>maybe you got lost in reading. click here to get back to where you're supposed to be</h4></a>
+    <a href="/"><h4>maybe you got lost in reading. click here to get back to where you're supposed to be.</h4></a>
     </div>
 </main>
 
