--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html>
 <head>
  
-    <title>404</title>
+    <title>lighthouse — 404</title>
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
 
