--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
     <script src="/js/isotope.js"></script>
     <script src="/js/angular-isotope.js"></script>
+    <script src="/js/airtable.browser.js"></script>
     <script src="/js/app.js"></script>
     <script src="/js/longform_controller.js"></script>
     <script src="/js/longform_entries.js"></script>
